session highscore and games played

--- a/templates/game-board.html
+++ b/templates/game-board.html
@@ -10,6 +10,7 @@
     <h1>Boggle!</h1>
     <hr>
     <div class="timer"></div>
+    <h3 class="high-score">High Score: {{high_score}} - - - Games Played: {{games_played}}</h3>
     <table>
     <tbody>
     {% for row in board %}
